# src

./: test.urdf  ur3e_generated.urdf
src/Universal_Robots_ROS2_Driver/ur_controllers/src/: scaled_joint_trajectory_controller.cpp
src/gz_ros2_control/doc/: index.rst
src/gz_ros2_control/gz_ros2_control/src/: gz_system.cpp
src/models/class_table/: model.config  model.sdf
src/models/class_table/meshes/: BOX1.STL  BOX2.STL  BOX3.STL  UR3eTABLE.STL  table.STL  tablebox_box1.STL  tablebox_box2.STL  tablebox_box3.STL  tablebox_table.STL
src/onrobot_2FG7_gripper_description/: CMakeLists.txt  package.xml
src/ros2_robotiq_gripper/robotiq_description/: package.xml
src/ros2_robotiq_gripper/robotiq_description/urdf/: 2f_85.ros2_control.xacro
src/ur_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_gripper_moveit/config/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
src/ur_gripper_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_moveit/config/: chomp_planning.yaml  kinematics.yaml  ompl_planning.yaml  ur.srdf  ur.urdf.xacro
src/ur_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur_sim/: CMakeLists.txt  package.xml
src/ur_sim/config/: ur3e_gripper_controllers.yaml
src/ur_sim/launch/: spawn_ur3e.launch.py  spawn_ur3e_gripper.launch.py  spawn_ur3e_gripper_moveit.launch.py  spawn_ur3e_moveit.launch.py  view_ur3e.launch.py  view_ur3e_gripper.launch.py
src/ur_sim/rviz/: view_ur3e.rviz
src/ur_sim/scripts/: stack (copy).py  stack.py  stack_bu_new.py  stack_old.py  test_move.py
src/ur_sim/urdf/: robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro  ur3e.ros2_control.xacro  ur3e.urdf.xacro  ur3e_gripper.urdf.xacro  ur3e_macro.xacro
src/ur_sim/worlds/: cubes.sdf  ur3e_on_table.sdf
